<resources>
    <string name="app_name">SearchMovie</string>
    <string name="watch_film">Смотреть фильм</string>
    <string name="watch_trailer">Смотреть трейлер</string>
    <string name="name">Название</string>
    <string name="popular">Популярные</string>
    <string name="text_rating_imdb">IMDb</string>
    <string name="text_rating_kp">KP</string>
    <string name="text_rating_movie">7.0</string>
    <string name="no_name">Нет названия</string>
    <string name="minutes">минут</string>
    <string name="random_time">152</string>
    <string name="year">2023</string>
    <string name="release_date">Дата выхода</string>
    <string name="genre">Жанр</string>
    <string name="comedy">Комедия</string>
    <string name="thriller">Триллер</string>
    <string name="description">Описание</string>
    <string name="read_less_text">…Уменьшить</string>
    <string name="read_more_text">…Увеличить</string>
    <string name="no_description">Описание к фильму отсутствует</string>
    <string name="no_genre">Без жанра</string>
    <string name="similar_movies">Похожие фильмы</string>
    <string name="network_date">Данные были взяты с интернета</string>
    <string name="local_date">Данные иил часть данных были взяты с локальной базы данных</string>
    <string name="positive_option">Ок</string>
    <string name="negative_option">Отмена</string>
    <string name="no_internet">Отсутсвует интеренет</string>
    <string name="connect_internet">Подключено к интернету</string>
    <string name="show_selection_of_movies_from_database">Взять фильмы с локальной базы данных?</string>
    <string name="show_selection_of_movies_from_network">Взять фильмы с сети?</string>
    <string name="search_movies_and_categories">Поиск фильмов и выбор по категориям</string>
    <string name="enter_text">Введите текст</string>
</resources>