<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="24dp"
    android:layout_marginVertical="10dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@id/first_line">

        <TextView
            android:id="@+id/text_view_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_bold"
            android:text="@string/release_date"
            android:textColor="@color/black"
            android:textSize="@dimen/section_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_year_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:text="@string/year"
            android:textSize="@dimen/text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_release_date" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_middle_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/text_view_genre_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_bold"
            android:text="@string/genre"
            android:textColor="@color/black"
            android:textSize="@dimen/section_text_size"
            app:layout_constraintStart_toStartOf="@id/gl_middle_screen"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_first_genre_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_strip"
            android:fontFamily="@font/lato"
            android:minHeight="40dp"
            android:text="@string/comedy"
            android:textSize="@dimen/text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/gl_middle_screen"
            app:layout_constraintTop_toBottomOf="@id/text_view_genre_movie" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_second_genre_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_strip"
            android:fontFamily="@font/lato"
            android:layout_marginStart="10dp"
            android:minHeight="40dp"
            android:text="@string/thriller"
            android:textSize="@dimen/text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/button_first_genre_movie" />
</androidx.constraintlayout.widget.ConstraintLayout>