<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_view_name_in_info_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="@dimen/caption_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image_view_quality_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:src="@drawable/quality_video"
            android:visibility="visible"
            app:layout_constraintStart_toEndOf="@id/text_view_name_in_info_movie"
            app:layout_constraintTop_toTopOf="@id/text_view_name_in_info_movie" />

        <com.example.searchmovie.presentation.customView.CommonCustomView
            android:id="@+id/custom_view_duration_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_text"
            android:layout_marginTop="10dp"
            app:drawable_res="@drawable/image_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_name_in_info_movie"
            tools:first_text="@string/random_time"
            tools:second_text="@string/minutes" />

        <com.example.searchmovie.presentation.customView.CommonCustomView
            android:id="@+id/custom_view_rating_imdb_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            app:drawable_res="@drawable/image_star_gray"
            app:layout_constraintBottom_toBottomOf="@id/custom_view_duration_movie"
            app:layout_constraintStart_toEndOf="@id/custom_view_duration_movie"
            app:layout_constraintTop_toTopOf="@id/custom_view_duration_movie"
            tools:first_text="@string/text_rating_movie"
            tools:second_text="@string/text_rating_imdb" />

        <com.example.searchmovie.presentation.customView.CommonCustomView
            android:id="@+id/custom_view_rating_kp_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            app:drawable_res="@drawable/image_star_yellow"
            app:layout_constraintBottom_toBottomOf="@id/custom_view_rating_imdb_movie"
            app:layout_constraintStart_toEndOf="@id/custom_view_rating_imdb_movie"
            app:layout_constraintTop_toTopOf="@id/custom_view_rating_imdb_movie"
            tools:first_text="@string/text_rating_movie"
            tools:second_text="@string/text_rating_kp" />

        <View
            android:id="@+id/first_line"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginHorizontal="@dimen/margin_start_text"
            android:layout_marginVertical="10dp"
            android:background="@color/gray_shadow_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/custom_view_duration_movie" />

        <include
            android:id="@+id/container_date_and_genre_movie"
            layout="@layout/screen_date_and_genre_movie" />

        <View
            android:id="@+id/second_line"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginHorizontal="@dimen/margin_start_text"
            android:layout_marginTop="10dp"
            android:background="@color/gray_shadow_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/container_date_and_genre_movie" />

        <TextView
            android:id="@+id/text_view_title_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="12dp"
            android:textColor="@color/black"
            android:textSize="@dimen/section_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/second_line"
            tools:text="@string/description" />

        <TextView
            android:id="@+id/text_view_description_movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_start_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_title_description" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</merge>