<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container_layout_duration_and_rating"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/image_time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/time_in_minutes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/time_in_minutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_regular"
        android:textColor="@color/black"
        android:text="@string/random_time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/minutes"
        app:layout_constraintStart_toEndOf="@id/image_time"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/minutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_regular"
        android:textColor="@color/black"
        android:text="@string/minutes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/image_star_gray"
        app:layout_constraintStart_toEndOf="@id/time_in_minutes"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@id/image_star_gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/image_star_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/text_rating_card_movie"
        app:layout_constraintStart_toEndOf="@id/minutes"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_rating_card_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_regular"
        android:textColor="@color/black"
        android:text="@string/text_rating_movie"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/text_imd_card_movie"
        app:layout_constraintStart_toEndOf="@id/image_star_gray"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_imd_card_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_regular"
        android:textColor="@color/black"
        android:text="@string/text_rating"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/text_rating_card_movie"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>